--- a/syncthing.yml
+++ b/syncthing.yml
@@ -10,7 +10,6 @@ services:
     volumes:
       - ./data/syncthing:/var/syncthing
     ports:
-      - 8384:8384
       - 22000:22000/tcp
       - 22000:22000/udp
     restart: unless-stopped
@@ -18,4 +17,4 @@ services:
 networks:
   default:
     external:
-      name: caddy
+      name: wireguard
