Add gluetun to wg_ub.yml (since container mode requires that the other container already exists) and remove gluentun from dc.sh, as well as adding .yml extensions automatically.

--- a/wg_ub.yml
+++ b/wg_ub.yml
@@ -59,3 +59,11 @@ services:
     networks:
       private_network:
         ipv4_address: 10.2.0.100
+
+  gluetun:
+    image: qmcgaw/gluetun
+    container_name: gluetun
+    cap_add:
+      - NET_ADMIN
+    env_file: private/gluetun.env
+    network_mode: "service:wireguard"
