--- a/netdata.yml
+++ b/netdata.yml
@@ -18,6 +18,9 @@ services:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
       - /etc/os-release:/host/etc/os-release:ro
+    networks:
+      default:
+        ipv4_address: 10.2.0.15
 
 networks:
   default:
