--- a/watchtower.yml
+++ b/watchtower.yml
@@ -5,6 +5,6 @@ services:
     container_name: watchtower
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    restart: unless-stopped
+    restart: "no"
     env_file: 
     - private/watchtower.env
