--- a/organizr.yml
+++ b/organizr.yml
@@ -4,6 +4,9 @@ services:
     image: organizr/organizr
     container_name: organizr
     restart: unless-stopped
+    environment:
+      PGID: 1000
+      PUID: 1000
     volumes:
       - ./data/organizr:/config
     dns: 10.2.0.100
