Remove gt_ub and uptime_kuma from dc.sh as they are restarted separately, add acme.yaml with acme.sh and ofelia for automatic cert renewal

--- a/caddy.yml
+++ b/caddy.yml
@@ -10,6 +10,8 @@ services:
       - ./data/caddy-data:/data
     env_file:
       - private/caddy.env
+    labels:
+      - sh.acme.autoload.domain=${DOMAIN}
     networks:
       wireguard:
         ipv4_address: 10.2.0.10
